--- a/src/components/Main/List/Post/PostContent/PostContent.module.css
+++ b/src/components/Main/List/Post/PostContent/PostContent.module.css
@@ -33,9 +33,9 @@
   }
 
   @media (min-width: 580px) {
-    .linkPost {
+    /* .linkPost {
       font-size: 26px;
-    }
+    } */
     .linkPost:hover {
       color: #cc6633;
     }
